changed header styles

--- a/Class 8/hairsalon/index.html
+++ b/Class 8/hairsalon/index.html
@@ -63,9 +63,10 @@
       <section class="hero">
         <p class="opening-hours">MON-SUN : 7:00AM - 8:00PM</p>
         <div class="hero-content contained">
-          <h2>Blonde & Highlight</h2>
-          <h1>Divide your uniqueness by your hairs in tyle</h1>
-          <a href="">
+          <h2 class="main-headline">Blonde</h2>
+          <h2 class="main-headline">& Highlight</h2>
+          <h1 class="slogan">Divide your uniqueness by your hairs in tyle</h1>
+          <a class="hero-cta" href="">
             <i class="fa-solid fa-minus"></i>
             Our Services
           </a>
