finished header section

--- a/Class 8/hairsalon/index.html
+++ b/Class 8/hairsalon/index.html
@@ -70,6 +70,7 @@
             <i class="fa-solid fa-minus"></i>
             Our Services
           </a>
+          <!-- CTA Card -->
           <div class="cta-card">
             <span>Your first Visit?</span>
             <p>
@@ -91,25 +92,62 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="feature">
-          <img src="" alt="" class="features-image" />
-          <p class="feature-title"></p>
-          <p class="feature-subtitle"></p>
-        </div>
-        <div class="feature">
-          <img src="" alt="" class="features-image" />
-          <p class="feature-title"></p>
-          <p class="feature-subtitle"></p>
-        </div>
-        <div class="feature">
-          <img src="" alt="" class="features-image" />
-          <p class="feature-title"></p>
-          <p class="feature-subtitle"></p>
-        </div>
-      </section>
     </header>
     <main>
+      <!-- Features section -->
+      <section class="features">
+        <div class="feature">
+          <div class="img-container">
+            <img
+              width="50"
+              height="50"
+              src="https://img.icons8.com/ios/50/hairdresser.png"
+              alt="hairdresser"
+              class="features-image"
+            />
+            <span class="img-decoration"></span>
+          </div>
+          <p class="feature-title">Expert Beauticians</p>
+          <p class="feature-subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni,
+            officia. Dolor maiores hic labore ipsa?
+          </p>
+        </div>
+        <div class="feature">
+          <div class="img-container">
+            <img
+              width="48"
+              height="48"
+              src="https://img.icons8.com/pulsar-line/48/barber-chair.png"
+              alt="barber-chair"
+              class="features-image"
+            />
+            <span class="img-decoration"></span>
+          </div>
+          <p class="feature-title">Quality Services</p>
+          <p class="feature-subtitle">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis
+            repellat officiis saepe nihil minima pariatur!
+          </p>
+        </div>
+        <div class="feature">
+          <div class="img-container">
+            <img
+              width="50"
+              height="50"
+              src="https://img.icons8.com/ios/50/hair-colouring.png"
+              alt="hair-colouring"
+              class="features-image"
+            />
+            <span class="img-decoration"></span>
+          </div>
+          <p class="feature-title">Beauty Products</p>
+          <p class="feature-subtitle">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+            labore perferendis incidunt voluptatum minus. Similique.
+          </p>
+        </div>
+      </section>
       <!-- video section -->
       <section class="video-section">
         <div></div>
