--- a/Class 8/hairsalon/index.html
+++ b/Class 8/hairsalon/index.html
@@ -66,7 +66,7 @@
           <h2 class="main-headline">Blonde</h2>
           <h2 class="main-headline">& Highlight</h2>
           <h1 class="slogan">Divide your uniqueness by your hairs in tyle</h1>
-          <a class="hero-cta" href="">
+          <a class="button-black" href="">
             <i class="fa-solid fa-minus"></i>
             Our Services
           </a>
@@ -77,7 +77,7 @@
               <span><i class="fa-solid fa-minus"></i> 20%</span> For the first
               classic hair coloring
             </p>
-            <a href="">
+            <a href="" class="button-white">
               <i class="fa-solid fa-minus"></i>
               Book Online
             </a>
@@ -148,51 +148,118 @@
           </p>
         </div>
       </section>
-      <!-- video section -->
-      <section class="video-section">
-        <div></div>
-        <div></div>
+      <!-- Demo Section -->
+      <section class="demo">
+        <div class="text">
+          <h3>Make your</h3>
+          <h3>own momentum</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            quisquam, animi vitae, molestias nulla asperiores explicabo quidem
+            mollitia dolores et repudiandae. Quod officiis minima dolorem
+            molestias in cupiditate, nihil autem!
+          </p>
+          <a href="" class="button-black">
+            <i class="fa-solid fa-minus"></i>
+            Read more
+          </a>
+        </div>
+        <div class="media">
+          <video
+            src="https://videos.pexels.com/video-files/3997167/3997167-uhd_4096_2160_25fps.mp4"
+          ></video>
+        </div>
       </section>
       <!-- Stylists section -->
       <section class="stylists">
+        <!-- Stylist -->
         <div class="stylist">
-          <img src="" alt="" />
-          <div class="stylist-info"></div>
-          <p class="name"></p>
-          <p class="role"></p>
+          <img
+            src="https://images.unsplash.com/photo-1617690825204-069678e3a2d5?q=80&w=300&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+            class="stylist-media"
+          />
+          <div class="stylist-info">
+            <p class="stylist-name">Alita Willims</p>
+            <p class="stylist-role">Colourist</p>
+          </div>
         </div>
+        <!-- Stylist -->
         <div class="stylist">
-          <img src="" alt="" />
-          <div class="stylist-info"></div>
-          <p class="name"></p>
-          <p class="role"></p>
+          <img
+            src="https://images.unsplash.com/photo-1617690825204-069678e3a2d5?q=80&w=300&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+            class="stylist-media"
+          />
+          <div class="stylist-info">
+            <p class="stylist-name">Ayesha lake</p>
+            <p class="stylist-role">Styler</p>
+          </div>
         </div>
+        <!-- Stylist -->
         <div class="stylist">
-          <img src="" alt="" />
-          <div class="stylist-info"></div>
-          <p class="name"></p>
-          <p class="role"></p>
+          <img
+            src="https://images.unsplash.com/photo-1617690825204-069678e3a2d5?q=80&w=300&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+            class="stylist-media"
+          />
+          <div class="stylist-info">
+            <p class="stylist-name">Smith Michigan</p>
+            <p class="stylist-role">Beautician</p>
+          </div>
         </div>
       </section>
-      <!-- promotions -->
-      <section class="promotion">
-        <span></span>
-        <p></p>
-        <p></p>
-        <a href=""></a>
+      <!-- Promotion Banner Section -->
+      <section class="banner">
+        <h3 class="headline">Colour day offer!</h3>
+        <p>
+          <span><i class="fa-solid fa-minus"></i> 10%</span> on haircut color
+          and highlight
+        </p>
+        <a class="button-black" href="">
+          <i class="fa-solid fa-minus"></i>
+          Book appointment
+        </a>
       </section>
       <section class="lookbook">
-        <div>
-          <img src="" alt="" />
-          <img src="" alt="" />
-        </div>
-        <div>
-          <img src="" alt="" />
-          <img src="" alt="" />
-        </div>
-        <div>
-          <img src="" alt="" />
-          <img src="" alt="" />
+        <h2 class="title">Our lookbook</h2>
+        <div class="lookbook-imgs">
+          <!-- 1 -->
+          <div>
+            <img
+              src="https://images.unsplash.com/photo-1470259078422-826894b933aa?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+            <img
+              class="span-2"
+              src="https://plus.unsplash.com/premium_photo-1669675936434-d9fea7172056?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmN1dHxlbnwwfDF8MHx8fDA%3D"
+              alt=""
+            />
+          </div>
+          <!-- 2 -->
+          <div>
+            <img
+              class="span-2"
+              src="https://plus.unsplash.com/premium_photo-1669675936434-d9fea7172056?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmN1dHxlbnwwfDF8MHx8fDA%3D"
+              alt=""
+            />
+            <img
+              src="https://images.unsplash.com/photo-1470259078422-826894b933aa?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <!-- 3 -->
+          <div>
+            <img
+              src="https://images.unsplash.com/photo-1470259078422-826894b933aa?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+            <img
+              class="span-2"
+              src="https://plus.unsplash.com/premium_photo-1669675936434-d9fea7172056?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmN1dHxlbnwwfDF8MHx8fDA%3D"
+              alt=""
+            />
+          </div>
         </div>
       </section>
     </main>
